--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legitimate site</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div>
-        <h1>Enter your e-mail login credentials to redeem your *FREE V-BUCKS!*</h1>
-        <input class="email" type="text" placeholder="input e-mail...">
-        <input class="pwd" type="password" placeholder="input password...">
-        <button class="button">Redeem NOW!</button>
+    <div class="register">
+        <h2>Registration</h2>
+        <div class="register-info">
+            <input class="name" placeholder="username">
+            <input type="email" class="email" placeholder="email">
+            <input type="password" class="pwd" placeholder="password">
+            <input type="password" class="pwd-verif" placeholder="repeat password">
+            <input type="date" class="bday">
+            <div class="gender-inputs">
+                <div class="male-gender">
+                    <input type="radio" name="gender" id="male" class="genderm">
+                    <label for="male">♂</label>
+                </div>
+                <div class="female-gender">
+                    <input type="radio" name="gender" id="female" class="genderf">
+                    <label for="female">♀</label>
+                </div>
+            </div>
+        </div>
+        <button class="continue">CONTINUE</button>
     </div>
     <script src="brains.js"></script>
 </body>
+
 </html>
